myteo/test/analyze/type_check/binary_operation/bitwise.myte
module test

fun bitwise() {
  // Non-erroring cases
  (1 & 1: int);
  (1 & 2 & 3 & 4: int);
  (1 | 2: int);
  (1 ^ 2: int);
  (1 << 2: int);
  (1 >> 2: int);
  (1 >>> 2: int);

  // If only one type is addable error and type expression with that type
  (1 & true: int);
  (true & "a": string);

  // If both types are addable but incompatible error and type expression with
  // left hand type.
  val i: int = 1;
  val b: byte = 2;
  (i & b: int);
  (b & i: byte);

  // Literal inferred as correct int type
  (1 & b: int);
  (b & 1: int);
}

fun main() {}